Add example of ftp password config

--- a/secrets.example
+++ b/secrets.example
@@ -14,6 +14,10 @@ passphrase: foo bar baz
 AWS_ACCESS_KEY_ID: key
 AWS_SECRET_ACCESS_KEY: sec key
 
+[ftp]
+
+password = foo bar baz
+
 [duplicity]
 
 sources: /home/walter/foo
